# IDJ-2024.2

./: CMakeLists.txt  README.md
include/: Game.h  Music.h  Sprite.h  State.h
src/: Game.cpp  Music.cpp  Sprite.cpp  State.cpp  main.cpp
